2009-10-02  Alexander Larsson  <alexl@redhat.com>

	* freedesktop.org.xml.in:
	Correct magic for application/x-mswinurl, offset is 11 not 10,
	because the newline is cr + lf. See tests/test.url

2009-10-02  Alexander Larsson  <alexl@redhat.com>

	Based on patch from David Faure <faure@kde.org>

	* shared-mime-info-spec.xml: Define new case-sensitive attribute, and
	change the text from the two-step glob match to a single glob match,
	that is either case sensitive or case insensitive. Add flags field to
	globs2 file, define the "cs" flag.

	* freedesktop.org.xml.in:
	Make core, *.c and *.C case sensitive  (Closes: #22634)

	* update-mime-database.c:
	Process case-sensitive flag, write it out in globs2 and mime.cache

	* tests/list:
	Mark as expected success the previously problematic
	case sensitive issues.

2009-09-30  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Fix "make check" problem for MRML.

2009-09-26  David Faure  <faure@kde.org>

	* freedesktop.org.xml.in: Add expanded-acronym for MRML in text/x-mrml.

2009-09-24  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add magic for another MP4 file type

2009-09-22  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add magic for RealMedia Format files

2009-09-18  David Faure  <faure@kde.org>

	* freedesktop.org.xml.in: Remove wrong magic for application/x-java-archive.
	The 0xcafe magic is really for java class files and since they get compressed
	we won't find it anywhere in the jar file. I even found it in normal zip files
	for completely unrelated reasons, so it doesn't make sense to have it.

2009-09-17  David Faure  <faure@kde.org>

	* freedesktop.org.xml.in: Add application/java-archive alias
	for application/x-java-archive so that distributions can get rid
	of /usr/share/mime/packages/sun-java6-jre.xml, which was defining 
	another mimetype for the *.jar glob, causing
	https://bugs.launchpad.net/ubuntu/+source/krusader/+bug/309778
