@@ -14,11 +14,8 @@ A few ground rules for people interested in adding new mime-types.
 Translations
 ------------
 
-Translations should go through the Translation Project at:
-http://translationproject.org/latest/shared-mime-info/
-
-More details at:
-http://translationproject.org/html/maintainers.html
+Translations should go through Transifex.net:
+http://www.transifex.net/projects/p/shared-mime-info/c/default/
 
 CVS
 ---
