@@ -1,3 +1,8 @@
+2009-10-05  Bastien Nocera  <hadess@hadess.net>
+
+	* HACKING:
+	* Makefile.am: Update for transifex.net use
+
 2009-10-02  Alexander Larsson  <alexl@redhat.com>
 
 	* freedesktop.org.xml.in:
